[gd_scene load_steps=2 format=2]

[ext_resource path="res://shared/managers/sound_manager.gd" type="Script" id=1]

[node name="SoundManager" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioStreamPlayers" type="Node" parent="."]

[node name="AudioStreamPlayer2Ds" type="Node2D" parent="."]
